@@ -1,13 +1,9 @@
 package badIceCream.model.menu;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class InstructionsMenuFirstPage extends Menu {
-
     public InstructionsMenuFirstPage() {
-        super(Arrays.asList("Quit to Main Menu"));
-    }
-    public boolean isSelectedQuitToMainMenu() {
-        return isSelected(0);
+        super(List.of("Quit to Main Menu"));
     }
 }
